--- a/html/about.html
+++ b/html/about.html
@@ -14,7 +14,7 @@
                 <img class="imgl" src="c.png" width="30%">
                 <img class="imgr" src="js.png" width="30%">
                 
-                <center><a class="button" href="file:///C:/Users/06ash/Desktop/%E6%96%B0%E5%A2%9E%E8%B3%87%E6%96%99%E5%A4%BE/html/index.html">回主頁</a></center>
+                <center><a class="button" href="https://hsuan619.github.io/simplepage/html/index.html">回主頁</a></center>
 
             </div>>
         </div>
