--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
             <a target="_blank" href="https://github.com/hsuan619" style="color:rgb(204,124,20)"><h2><center>Welocme to my Github</center></h2></a>              
         </div>
         <div>
-            <a href="file:///C:/Users/06ash/Desktop/%E6%96%B0%E5%A2%9E%E8%B3%87%E6%96%99%E5%A4%BE/html/about.html" style="color:rgb(204,124,20)"><h2><center>About SCORE</center></h2></a>
+            <a href="https://hsuan619.github.io/simplepage/html/about.html" style="color:rgb(204,124,20)"><h2><center>About SCORE</center></h2></a>
         </div>
 
     </body>
